# riichi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
decompose-lut/: Cargo.toml
decompose-lut/src/: honors.rs  main.rs  numbers.rs
src/: array_vec.rs  hand.rs  lib.rs  main.rs  multiset.rs  scorable_hand.rs  score.rs  tile.rs  tile_multi_set.rs  tile_set.rs  tile_suited_multi_set.rs  tileset.rs
src/decompose/: honors.generated.rs  mod.rs  numbers.generated.rs
