[package]
name = "riichi"
version = "0.1.0"
license = "AGPL-3.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2024"

[dependencies]

[lints]
workspace = true

[workspace]
members = [
	".",
	"decompose-lut",
]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
default_trait_access = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
unreadable_literal = "allow"
